# CM-Lab6

./: CMakeLists.txt  config.txt  untitled.ui
include/: de_calculator.hpp  equation.hpp  mainwindow.hpp  ui_mainwindow.hpp
src/: de_calculator.cpp  equation.cpp  main.cpp  mainwindow.cpp
